src/test/k3s/mailhog/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mailhog
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: smtp
      port: 25
      targetPort: smtp
  selector:
    app.kubernetes.io/name: mailhog
